# the-council-plugin

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
agents/: architect.md  critic.md  curator.md  planner.md  security-auditor.md  strategist.md
scripts/: launch-satellite.sh
skills/consult/: SKILL.md
skills/council-build/: SKILL.md
skills/council-consult/: SKILL.md
skills/council-export/: SKILL.md
skills/council-init/: SKILL.md
skills/council-maintain/: SKILL.md
skills/council-reset/: SKILL.md
skills/council-setup/: SKILL.md
skills/council-status/: SKILL.md
skills/council-update/: SKILL.md
skills/export/: SKILL.md
skills/init/: SKILL.md
skills/maintain/: SKILL.md
skills/reset/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
src/: config.py  memory.py  satellite.py  server.py
